--- a/app.css
+++ b/app.css
@@ -471,7 +471,7 @@ main {
     position: absolute;
     top: 0%;
     left: 0%;
-    width: 20%;
+    /* width: 20%; */
     transition: .2s ease-in;
     height: 100%;
     border-radius: 50px;
